--- a/index.html
+++ b/index.html
@@ -1,80 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!--materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fahad Alam</title>
 </head>
-
 <body>
-
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Fahad Alam</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="index.html"><i class="material-icons">account_circle</i></a></li>
-                <li><a href="portfolio.html"><i class="material-icons">view_module</i></a></li>
-                <li><a href="contact.html"><i class="material-icons">email</i></a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="row">
-
-        <div class="col s12 m6"><span class="flow-text">
-                <h3>About Me</h3>
-                <hr>
-
-                <div class="col s12 m2">
-                    <img src="images/prof.jpg" width=200px class="rounded-right" class="z-depth-3"
-                        alt="Fahad tries to eat pizza" align=left>
-                </div>
-
-                <p class="flow-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quod odio iusto
-                    maiores
-                    minima, possimus quaerat impedit laboriosam, neque quos blanditiis dicta laborum!
-                    Consectetur sapiente ut incidunt beatae magni aut. Lorem ipsum dolor sit amet consectetur
-                    adipisicing
-                    elit. </p>
-
-                <p class="flow-text">
-                    Placeat maxime aliquid modi dicta, cum
-                    molestiae distinctio quaerat aspernatur excepturi perspiciatis, soluta esse vero magnam nihil
-                    doloremque
-                    asperiores, blanditiis corporis harum.
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum rerum eaque esse perspiciatis,
-                    nam
-                    officiis quae perferendis assumenda. Incidunt vel quae id saepe vero tempore deleniti error
-                    rerum
-                    pariatur numquam.</p>
-            </span></div>
+    <div class="nav">
+        <a>Portfolio</a>
+        <a>Résumé</a>
     </div>
-
-    <div class="fixed-bottom">
-        <h7>&copy;2019</h7>
+    <div class="hello">
+        <h2>Hi, I'm Fahad.</h2>
+        <h3>I am a full-stack developer.</h3>
     </div>
-
+    <div class="port">
+        <!-- portfolio examples here -->
+        <a href="portfolio.html">More</a>
+    </div>
+    <div class="fixed-bottom"><h7>&copy;fa2019</h7></div>
 </body>
-
-<!-- scripts -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
-
 </html>
