--- a/portfolio.html
+++ b/portfolio.html
@@ -15,18 +15,6 @@
 </head>
 
 <body>
-
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Fahad Alam</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="index.html"><i class="material-icons">account_circle</i></a></li>
-                <li><a href="portfolio.html"><i class="material-icons">view_module</i></a></li>
-                <li><a href="contact.html"><i class="material-icons">email</i></a></li>
-            </ul>
-        </div>
-    </nav>
-
     <div class="container">
         <div class="row">
             <!-- project card 1 -->
@@ -107,27 +95,23 @@
             </div>
         </div>
         <div class="row">
-                <div class="card small">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/port_art.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Miscellaneous<i
-                                class="material-icons right">more_vert</i></span>
-                        <p><a href="#" target="_blank">Link to site</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Title<i
-                                class="material-icons right">close</i></span>
-                        <p>Coming soon.</p>
-                    </div>
+            <div class="card small">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="images/port_art.jpg">
                 </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Miscellaneous<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#" target="_blank">Link to site</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Title<i
+                            class="material-icons right">close</i></span>
+                    <p>Coming soon.</p>
+                </div>
+            </div>
         </div>
-
-        <div class="fixed-bottom">
-            <h7>&copy;2019</h7>
-        </div>
-
+        <div class="fixed-bottom"><h7>&copy;fa2019</h7></div>
 </body>
 
 <!-- scripts -->
