--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!--materialize.css-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/style.css" />
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Portfolio</title>
+    <title>Fahadfolio</title>
 </head>
 
 <body>
@@ -111,7 +110,7 @@
                 </div>
             </div>
         </div>
-        <div class="fixed-bottom"><h7>&copy;fa2019</h7></div>
+        <div class="fixedBottom"><h7>&copy;fa2019</h7></div>
 </body>
 
 <!-- scripts -->
