--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/style.css" />
+
     <title>Fahad Alam</title>
 </head>
+
 <body>
     <div class="nav">
-        <a>Portfolio</a>
-        <a>Résumé</a>
+        <a href="portfolio.html">portfolio</a>
+        |
+        <a href="resume.html">résumé</a>
     </div>
-    <div class="hello">
+    <br><br><br>
+    <div class="hello"><br><br><br>
+        <div class="pic"><img id="profilePic" src="images/face.jpg" /></div>
         <h2>Hi, I'm Fahad.</h2>
         <h3>I am a full-stack developer.</h3>
+        <br><br><br>
     </div>
     <div class="port">
         <!-- portfolio examples here -->
-        <a href="portfolio.html">More</a>
+        <a href="portfolio.html">more</a>
     </div>
-    <div class="fixed-bottom"><h7>&copy;fa2019</h7></div>
+    <div class="fixedBottom">
+        <h7>&copy;fa2019</h7>
+    </div>
 </body>
+
 </html>
