--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <a href="resume.html">résumé</a>
     </div>
     <br><br><br>
-    <div class="hello"><br><br><br>
+    <div class="hello"><br><br><br><br><br><br>
         <div class="pic"><img id="profilePic" src="images/face.jpg" /></div>
         <h2>Hi, I'm Fahad.</h2>
         <h3>I am a full-stack developer.</h3>
-        <br><br><br>
+        <br><br><br><br><br><br>
     </div>
     <div class="port">
         <!-- portfolio examples here -->
