--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/style.css" />
 
@@ -13,16 +14,14 @@
 
 <body>
     <div class="nav">
-        <a href="portfolio.html">portfolio</a>
+        <a href="port.html">portfolio</a>
         |
         <a href="resume.html">résumé</a>
     </div>
-    <br><br><br>
-    <div class="hello"><br><br><br><br><br><br>
+    <div class="hello">
         <div class="pic"><img id="profilePic" src="images/face.jpg" /></div>
         <h2>Hi, I'm Fahad.</h2>
         <h3>I am a full-stack developer.</h3>
-        <br><br><br><br><br><br>
     </div>
     <div class="port">
         <!-- portfolio examples here -->
