--- a/port.html
+++ b/port.html
@@ -25,18 +25,24 @@
             <div class="col s6">
                 <div class="card small">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/port_project.jpg">
+                        <img class="activator" src="images/port_toast.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Project 1<i
+                        <span class="card-title activator grey-text text-darken-4">Roast My Toast<i
                                 class="material-icons right">more_vert</i></span>
                         <p><a href="https://steam-user.github.io/steam-user/" target="_blank">Link to site</a></p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Project 1<i
+                        <span class="card-title grey-text text-darken-4">Roast My Toast<i
                                 class="material-icons right">close</i></span>
-                        <p>This is the first class project worked on with Ahmed and James. We used data from two
-                            different APIs to give users a video game suggestion based on their local temperature.</p>
+                        <p>
+                            This image board thrives to inspire our inner chef to discover new recipes, share our
+                            inspirations with others, and post comments & ratings. Roast My Toast uses the Imgur
+                            API to store user-submitted images, which are saved to a MySQL database along with user
+                            comments.
+                            <br><br>
+                            Made in collaboration with Giovanna Roman, and Kemp Atkinson.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -44,17 +50,21 @@
             <div class="col s6">
                 <div class="card small">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/port_gem.jpg">
+                        <img class="activator" src="images/proj3.gif">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Gem Heist<i
+                        <span class="card-title activator grey-text text-darken-4">Text RPG<i
                                 class="material-icons right">more_vert</i></span>
-                        <p><a href="https://fahad011686.github.io/unit-4-game/" target="_blank">Link to site</a></p>
+                        <p><a href="https://vast-peak-78938.herokuapp.com/" target="_blank">Link to site</a></p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Gem Heist<i
+                        <span class="card-title grey-text text-darken-4">Digital Crab RPG<i
                                 class="material-icons right">close</i></span>
-                        <p>A simple game built using jQuery.</p>
+                        <p>A MERN full-stack text role playing game, using React props and components to dynamically
+                            display dialogue boxes, Javascript logic to progress the story, and MongoDB to track users,
+                            sessions, and scores.
+                            <br><br>
+                            Made in collaboration with Kemp Atkinson, William Tran, and Al Klim.</p>
                     </div>
                 </div>
             </div>
@@ -62,19 +72,19 @@
             <div class="col s6">
                 <div class="card small">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/port_ajax.jpg">
+                        <img class="activator" src="images/port_liri.gif">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Giphy Buttons<i
+                        <span class="card-title activator grey-text text-darken-4">LIRI<i
                                 class="material-icons right">more_vert</i></span>
-                        <p><a href="https://fahad011686.github.io/ajax/" target="_blank">Link to site</a></p>
+                        <p><a href="https://github.com/fahad011686/liri-node-app" target="_blank">Link to Github</a></p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Giphy Search Buttons<i
+                        <span class="card-title grey-text text-darken-4">LIRI<i
                                 class="material-icons right">close</i></span>
-                        <p>In this assignment, I utilized the GIPHY API to make a dynamic web page that populates with
-                            gifs of your choice. I used Ajax to pull data from the API and jQuery to change the HTML of
-                            the site.</p>
+                        <p>A backend NODE application, LIRI uses Spotify, OMDB, and Bands in Town APIs to pull data
+                            based on user input. In the example, a song title is searched with the Spotify API and
+                            results in the artist name, album, and link to song.</p>
                     </div>
                 </div>
             </div>
@@ -82,18 +92,22 @@
             <div class="col s6">
                 <div class="card small">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/port_firebase.jpg">
+                        <img class="activator" src="images/port_game.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Train Times<i
+                        <span class="card-title activator grey-text text-darken-4">Game Finder<i
                                 class="material-icons right">more_vert</i></span>
-                        <p><a href="https://fahad011686.github.io/Firebase/" target="_blank">Link to site</a></p>
+                        <p><a href="https://steam-user.github.io/steam-user/" target="_blank">Link to site</a></p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Train Times<i
+                        <span class="card-title grey-text text-darken-4">Game Finder<i
                                 class="material-icons right">close</i></span>
-                        <p>This site takes user data, saves to and pulls from Firebase. This way the information is not
-                            lost upon reset.</p>
+                        <p>A frontend webpage, Game Finder uses the Open Weather API to display weather based on
+                            zipcode. The page then recommends a video game to play based on the temperature, and pulls
+                            the game data from the Giant Bomb videogame API.
+                            <br><br>
+                            Made in collaboration with James Grodzicki, and Ahmed.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -104,15 +118,15 @@
                     <img class="activator" src="images/port_art.jpg">
                 </div>
                 <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Miscellaneous<i
+                    <span class="card-title activator grey-text text-darken-4">Hand <del>Typed</del> Made<i
                             class="material-icons right">more_vert</i></span>
-                    <p><a href="#" target="_blank">Link to site</a></p>
+                    <p><a href="#" target="_blank">Coming Soon.</a></p>
                 </div>
-                <div class="card-reveal">
+                <!-- <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Title<i
                             class="material-icons right">close</i></span>
                     <p>Coming soon.</p>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="fixedBottom">
