--- a/port.html
+++ b/port.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <link type="text/css" rel="stylesheet" href="css/styleP.css" />
-    <title>Fahad Alam</title>
+    <link rel="shortcut icon" href="images/favicon.png" />
+    <title>Fahadfolio</title>
 </head>
 
 <body>
@@ -128,9 +129,6 @@
                     <p>Coming soon.</p>
                 </div> -->
             </div>
-        </div>
-        <div class="fixedBottom">
-            <h7>&copy;fa2019</h7>
         </div>
 </body>
 <script type="text/javascript" src="js/materialize.min.js"></script>
