--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/068b97015c.js" crossorigin="anonymous"></script>
     <link type="text/css" rel="stylesheet" href="css/style.css" />
-
+    <link rel="shortcut icon" href="images/favicon.png" />
     <title>Fahad Alam</title>
 </head>
 
@@ -20,16 +21,19 @@
     </div>
     <div class="hello">
         <div class="pic"><img id="profilePic" src="images/face.jpg" /></div>
-        <h2>Hi, I'm Fahad.</h2>
-        <h3>I am a full-stack developer.</h3>
+        <h2>Fahad Alam</h2>
+        <h3>I am a full-stack developer and creative <br>based out of Oak Park, IL.</h3>
+                <a href="https://www.linkedin.com/in/fahadalam00/"><i class="fab fa-linkedin fa-3x"></i></a>
+                <a href="https://github.com/fahad011686"><i class="fab fa-github-square fa-3x"></i></a>
+                <a href = "mailto: fahad011686@gmail.com"><i class="fas fa-envelope-square fa-3x"></i></a>
+        
     </div>
+   
     <div class="port">
         <!-- portfolio examples here -->
-        <a href="portfolio.html">more</a>
+        <a href="port.html">more</a>
     </div>
-    <div class="fixedBottom">
-        <h7>&copy;fa2019</h7>
-    </div>
+    
 </body>
 
 </html>
