--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="nav">
         <a href="port.html">portfolio</a>
         |
-        <a target="_blank" href="FahadAlam_resume_1219.pdf">résumé</a>
+        <a href="resume.html">résumé</a>
     </div>
     <div class="hello">
         <div class="pic"><img id="profilePic" src="images/face.jpg" /></div>
