Styled resume page.

--- a/resume.html
+++ b/resume.html
@@ -16,10 +16,10 @@
 </head>
 
 <body>
-    <div id="nav">
-        <a href="index.html">home</a>
+    <div class="nav">
+        <a href="index.html">home </a>
         |
-        <a target="_blank" href="FahadAlam_resume_1219.pdf">download</a>
+        <a target="_blank" href="FahadAlam_resume_1219.pdf"> download</a>
     </div>
 
     <div class="container">
@@ -28,8 +28,9 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse1">Development Skill Set
+                        <a data-toggle="collapse" href="#collapse1">
                             <i class="far fa-arrow-alt-circle-down"></i>
+                            Skill Set
                         </a><br>
                     </h4>
                 </div>
@@ -41,8 +42,10 @@
                 </div>
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse2">Job History
+
+                        <a data-toggle="collapse" href="#collapse2">
                             <i class="far fa-arrow-alt-circle-down"></i>
+                            Job History
                         </a><br>
                     </h4>
                 </div>
@@ -61,8 +64,9 @@
                 </div>
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse3">Education
+                        <a data-toggle="collapse" href="#collapse3">
                             <i class="far fa-arrow-alt-circle-down"></i>
+                            Education
                         </a>
                     </h4>
                 </div>
