Added courses to resume.

--- a/resume.html
+++ b/resume.html
@@ -35,9 +35,9 @@
                     </h4>
                 </div>
                 <div id="collapse1" class="panel-collapse collapse">
-                    <div class="panel-body">Creative Problem Solving, Object-Oriented Programming, SKILL SET HTML, CSS,
+                    <div class="panel-body">Creative Problem Solving, Object-Oriented Programming, HTML, CSS,
                         Javascript/ES6, jQuery, Bootstrap, Materialize, MERN Stack (MongoDB, Express, React, Node),
-                        RESTful APIs, MVC Frameworks, Handlebars, Firebase, MySQL, Heroku, Git, Github.<br>
+                        RESTful APIs, MVC Frameworks, Handlebars, Firebase, MySQL, Heroku, Github.<br>
                         Hardware experience, built and installed components in PCs and Raspberry Pi computers.</div>
                 </div>
                 <div class="panel-heading">
@@ -74,8 +74,12 @@
                     <div class="panel-body">
                         <b>NORTHWESTERN UNIVERSITY</b><br>
                         Full stack web development bootcamp<br>
-                        <b>UDEMY.com</b><br>
-                        Certification for completing <i>Automate the Boring Stuff</i> with Python<br>
+                        <b>FULL STACK OPEN</b><br>
+                        2019 Modern Web Development course<br>
+                        <b>PACKT PUBLISHING</b><br>
+                        React Front to Back course<br>
+                        <b>UDEMY</b><br>
+                        <i>Automate the Boring Stuff</i> with Python<br>
                         <b>COLUMBIA COLLEGE CHICAGO</b><br>
                         B.A. Marketing Communications
                     </div>
