Updates to resume.

--- a/resume.html
+++ b/resume.html
@@ -37,8 +37,10 @@
                 <div id="collapse1" class="panel-collapse collapse">
                     <div class="panel-body">Creative Problem Solving, Object-Oriented Programming, HTML, CSS,
                         Javascript/ES6, jQuery, Bootstrap, Materialize, MERN Stack (MongoDB, Express, React, Node),
-                        RESTful APIs, MVC Frameworks, Handlebars, Firebase, MySQL, Heroku, Github.<br>
-                        Hardware experience, built and installed components in PCs and Raspberry Pi computers.</div>
+                        RESTful APIs, MVC Frameworks, Handlebars, Firebase, MySQL, Heroku, Github.
+                        <br>
+                        <br>
+                        Hardware experience, built and installed components in PC and Raspberry Pi. Hands-on creative experience with painting, character design, and screenprinting. Fluent with Adobe Creative Suite.</div>
                 </div>
                 <div class="panel-heading">
                     <h4 class="panel-title">
@@ -55,8 +57,8 @@
                         Overseeing product receiving and inspection. Running monthly and annual inventory.
                         Processing monthly closing paperwork for accounting, as well as weekly deposits. Directly
                         working with vendors for supply orders.
-                        Assisting Operations Department in multiple store openings and remodels across the country from
-                        Florida to Hawaii. Consulting inventory issues for numerous other stores.
+                        Assisting Operations Department in multiple store openings and remodels across the country. Consulting inventory issues for numerous locations.
+                        <br>
                         <br>
                         <b>PRO PATIOS</b> – Warehouse Manager, 2010-2012<br>
                         Filling orders, assembly, and delivery. Obtaining city permits and constructing patio spaces for
