--- a/port.html
+++ b/port.html
@@ -31,7 +31,7 @@
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Roast My Toast<i
                                 class="material-icons right">more_vert</i></span>
-                        <p><a href="https://steam-user.github.io/steam-user/" target="_blank">Link to site</a></p>
+                        <p><a href="https://project-0002.herokuapp.com/" target="_blank">Link to site</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Roast My Toast<i
