Removed art card.

--- a/port.html
+++ b/port.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="card small">
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="images/port_art.jpg">
@@ -123,13 +123,13 @@
                             class="material-icons right">more_vert</i></span>
                     <p><a href="#" target="_blank">Coming Soon.</a></p>
                 </div>
-                <!-- <div class="card-reveal">
+                <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Title<i
                             class="material-icons right">close</i></span>
                     <p>Coming soon.</p>
-                </div> -->
+                </div>
             </div>
-        </div>
+        </div> -->
 </body>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 
