--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="hello">
         <div class="pic"><img id="profilePic" src="images/face.jpg" /></div>
         <h2>Fahad Alam</h2>
-        <h3>I am a full-stack developer and creative <br>based out of Oak Park, IL.</h3>
+        <h3>I am a full-stack developer and creative <br>based out of Bloomingdale, IL.</h3>
                 <a href="https://www.linkedin.com/in/fahadalam00/"><i class="fab fa-linkedin fa-3x"></i></a>
                 <a href="https://github.com/fahad011686"><i class="fab fa-github-square fa-3x"></i></a>
                 <a href = "mailto: fahad011686@gmail.com"><i class="fas fa-envelope-square fa-3x"></i></a>
